COMMIT POST REPORT

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "WebServer": {
+    "UrlAPI": "https://localhost:44390/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
