--- a/BT_SendDataMISA/BT_SendDataMISA/BT_SendDataMISA.csproj
+++ b/BT_SendDataMISA/BT_SendDataMISA/BT_SendDataMISA.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentResults" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="3.1.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
