COMMIT GET AccessToken

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "AuthenToken": {
+    "url": "http://api.btsoftvn.com:8383/auth/token",
+    "username": "admin",
+    "password": "admin@54321",
+    "tendiaban": "yenbai",
+    "grant_type": "password",
+    "client_id": "ngAuthApp"
+  },
   "WebServer": {
     "UrlAPI": "https://localhost:44390/api/"
   },
