ANHPT COMMIT CODE

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -21,21 +21,21 @@
     "PathConfigTextFile": "C:\\ConfigTextFile\\",
     "FileTextName": "MISACONFIG.txt"
   },
-  "exeConfigFile": {
-    "Directory": "C:\\MISA JSC\\",
-    "Name": "MISA Bamboo.NET",
-    "Password": "100K_Doanh_Nghiep",
-    "ConnectStringName": "BambooSQLlocal",
-    "IgnoreConnectString": "Integrated Security=True;Asynchronous Processing=True;MultipleActiveResultSets=True;Connect Timeout=60;User Instance=False",
-    "RegexString": "Data\\s+Source\\=(.\\\\)?([^;]+)"
-  }
-  //,
   //"exeConfigFile": {
   //  "Directory": "C:\\MISA JSC\\",
-  //  "Name": "MISA Mimosa.NET",
+  //  "Name": "MISA Bamboo.NET",
   //  "Password": "100K_Doanh_Nghiep",
-  //  "ConnectStringName": "MimosaSQL",
-  //  "IgnoreConnectString": "asynchronous processing=True;multipleactiveresultsets=True;connect timeout=30",
-  //  "RegexString": "data\\s+source\\=(.\\\\)?([^;]+)"
+  //  "ConnectStringName": "BambooSQLlocal",
+  //  "IgnoreConnectString": "Integrated Security=True;Asynchronous Processing=True;MultipleActiveResultSets=True;Connect Timeout=60;User Instance=False",
+  //  "RegexString": "Data\\s+Source\\=(.\\\\)?([^;]+)"
   //}
+  //,
+  "exeConfigFile": {
+    "Directory": "C:\\MISA JSC\\",
+    "Name": "MISA Mimosa.NET",
+    "Password": "100K_Doanh_Nghiep",
+    "ConnectStringName": "MimosaSQL",
+    "IgnoreConnectString": "asynchronous processing=True;multipleactiveresultsets=True;connect timeout=30",
+    "RegexString": "data\\s+source\\=(.\\\\)?([^;]+)"
+  }
 }
