COMMIT GET SCHEDULER

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,14 +1,14 @@
 {
+  "WebServer": {
+    "UrlAPI": "http://localhost:53414/"
+  },
   "AuthenToken": {
-    "url": "http://api.btsoftvn.com:8383/auth/token",
+    "api": "auth/token",
     "username": "admin",
     "password": "admin@54321",
     "tendiaban": "yenbai",
     "grant_type": "password",
     "client_id": "ngAuthApp"
-  },
-  "WebServer": {
-    "UrlAPI": "https://localhost:44390/api/"
   },
   "Logging": {
     "LogLevel": {
@@ -22,6 +22,7 @@
     "FileTextName": "MISACONFIG.txt"
   },
   //"exeConfigFile": {
+  //  "TenUngDung": "MISABamboo.NET",
   //  "Directory": "C:\\MISA JSC\\",
   //  "Name": "MISA Bamboo.NET",
   //  "Password": "100K_Doanh_Nghiep",
@@ -31,11 +32,15 @@
   //}
   //,
   "exeConfigFile": {
+    "TenUngDung": "MISAMimosa.NET",
     "Directory": "C:\\MISA JSC\\",
     "Name": "MISA Mimosa.NET",
     "Password": "100K_Doanh_Nghiep",
     "ConnectStringName": "MimosaSQL",
     "IgnoreConnectString": "asynchronous processing=True;multipleactiveresultsets=True;connect timeout=30",
     "RegexString": "data\\s+source\\=(.\\\\)?([^;]+)"
+  },
+  "ApiName": {
+    "GetScheduler": "api/sys/scheduler/GetScheduler"
   }
 }
