--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,9 +1,9 @@
 {
   "WebServer": {
-    "UrlAPI": "http://localhost:53414/"
+    "UrlAPI": "http://localhost:8000/"
   },
   "AuthenToken": {
-    "api": "auth/token",
+    "api": "http://localhost:7890/token",
     "username": "admin",
     "password": "admin@54321",
     "tendiaban": "yenbai",
@@ -41,6 +41,7 @@
     "RegexString": "data\\s+source\\=(.\\\\)?([^;]+)"
   },
   "ApiName": {
-    "GetScheduler": "api/sys/scheduler/GetScheduler"
+    "GetScheduler": "api/sys/scheduler/GetScheduler",
+    "B02BCQT_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService"
   }
 }
