COMMIT Worker B02BCTC_Sync

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,7 +1,7 @@
 {
   "WebServer": {
-    //"UrlAPI": "http://localhost:8000/",
-    "UrlAPI": "http://localhost:53414/"
+    "UrlAPI": "http://localhost:8000/",
+    //"UrlAPI": "http://localhost:53414/"
   },
   "AuthenToken": {
     "api": "http://localhost:7890/token",
