ANHPT COMMIT SendDataToAPI

--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,7 +1,7 @@
 {
   "WebServer": {
-    "UrlAPI": "http://localhost:8000/",
-    //"UrlAPI": "http://localhost:53414/"
+    //"UrlAPI": "http://localhost:8000/"
+    "UrlAPI": "http://localhost:53414/"
   },
   "AuthenToken": {
     "api": "http://localhost:7890/token",
@@ -43,6 +43,6 @@
   },
   "ApiName": {
     "GetScheduler": "api/sys/scheduler/GetScheduler",
-    "B02BCQT_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService"
+    "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService"
   }
 }
