--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,13 +1,13 @@
 {
   "WebServer": {
-    //"UrlAPI": "http://localhost:8000/"
-    "UrlAPI": "http://localhost:53414/"
+    "UrlAPI": "http://localhost:8000/"
+    //"UrlAPI": "http://localhost:53414/"
   },
   "AuthenToken": {
     "api": "http://localhost:7890/token",
-    "username": "admin",
-    "password": "admin@54321",
-    "tendiaban": "yenbai",
+    "username": "dvqhns",
+    "password": "123456",
+    "tendiaban": "langson",
     "grant_type": "password",
     "client_id": "ngAuthApp"
   },
@@ -43,6 +43,8 @@
   },
   "ApiName": {
     "GetScheduler": "api/sys/scheduler/GetScheduler",
-    "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService"
+    "B01BCTC_Receive": "api/reportbctc/PHA_B01B_BCTC/ReceiveDataFromService",
+    "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService",
+    "B03bBCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService"
   }
 }
