ANHPT COMMIT appsettings.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /BT_SendDataMISA/BT_SendDataMISA/bin
 /BT_SendDataMISA/BT_SendDataMISA/obj
+/BT_SendDataMISA/BT_SendDataMISA/Properties/PublishProfiles/FolderProfile.pubxml
+/BT_SendDataMISA/BT_SendDataMISA/Properties/PublishProfiles/FolderProfile.pubxml.user
+/BT_SendDataMISA/BT_SendDataMISA/BT_SendDataMISA.csproj.user
