--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -45,6 +45,12 @@
     "GetScheduler": "api/sys/scheduler/GetScheduler",
     "B01BCTC_Receive": "api/reportbctc/PHA_B01B_BCTC/ReceiveDataFromService",
     "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService",
-    "B03bBCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService"
+    "B03bBCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "B03TT90_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "B04BCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "B04TT90_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "F01_01BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "F01_02_P1BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "F01_02_P2BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService"
   }
 }
