--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,7 +1,7 @@
 {
   "WebServer": {
-    "UrlAPI": "http://localhost:8000/"
-    //"UrlAPI": "http://localhost:53414/"
+    //"UrlAPI": "http://localhost:8000/"
+    "UrlAPI": "http://localhost:53414/"
   },
   "AuthenToken": {
     "api": "http://localhost:7890/token",
@@ -43,14 +43,15 @@
   },
   "ApiName": {
     "GetScheduler": "api/sys/scheduler/GetScheduler",
-    "B01BCTC_Receive": "api/reportbctc/PHA_B01B_BCTC/ReceiveDataFromService",
+    "B01BCTC_Receive": "api/reportbctc/PHA_B01_BCTC/ReceiveDataFromService",
+    "B01BCQT_Receive": "api/report/phbB01BCQT/ReceiveDataFromService",
     "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService",
     "B03bBCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "B03TT90_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "B04BCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "B04TT90_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "F01_01BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "F01_02_P1BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "F01_02_P2BCQT_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService"
+    "B03TT90_Receive": "api/report/phbB03_TT90/ReceiveDataFromService",
+    "B04BCTC_Receive": "api/reportbctc/BC04_BCTC_TT107/ReceiveDataFromService",
+    "B04TT90_Receive": "api/report/phbB04_TT90/ReceiveDataFromService",
+    "F01_01BCQT_Receive": "api/report/phbF01_01BCQT/ReceiveDataFromService",
+    "F01_02_P1BCQT_Receive": "api/reportbctc/PHB_F01_02_P1/ReceiveDataFromService",
+    "F01_02_P2BCQT_Receive": "api/report/phbF01_02BCQT/ReceiveDataFromService"
   }
 }
