--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -1,11 +1,10 @@
 {
   "WebServer": {
-    //"UrlAPI": "http://localhost:8000/"
-    "UrlAPI": "http://localhost:53414/"
+    "UrlAPI": "http://14.160.26.174:1133"
   },
   "AuthenToken": {
-    "api": "http://localhost:7890/token",
-    "username": "dvqhns",
+    "api": "http://api.btsoftvn.com:8383/auth/token",
+    "username": "hoangdat",
     "password": "123456",
     "tendiaban": "langson",
     "grant_type": "password",
@@ -42,16 +41,16 @@
     "RegexString": "data\\s+source\\=(.\\\\)?([^;]+)"
   },
   "ApiName": {
-    "GetScheduler": "api/sys/scheduler/GetScheduler",
-    "B01BCTC_Receive": "api/reportbctc/PHA_B01_BCTC/ReceiveDataFromService",
-    "B01BCQT_Receive": "api/report/phbB01BCQT/ReceiveDataFromService",
-    "B02BCTC_Receive": "api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService",
-    "B03bBCTC_Receive": "api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
-    "B03TT90_Receive": "api/report/phbB03_TT90/ReceiveDataFromService",
-    "B04BCTC_Receive": "api/reportbctc/BC04_BCTC_TT107/ReceiveDataFromService",
-    "B04TT90_Receive": "api/report/phbB04_TT90/ReceiveDataFromService",
-    "F01_01BCQT_Receive": "api/report/phbF01_01BCQT/ReceiveDataFromService",
-    "F01_02_P1BCQT_Receive": "api/reportbctc/PHB_F01_02_P1/ReceiveDataFromService",
-    "F01_02_P2BCQT_Receive": "api/report/phbF01_02BCQT/ReceiveDataFromService"
+    "GetScheduler": "/api/sys/scheduler/GetScheduler",
+    "B01BCTC_Receive": "/api/reportbctc/PHA_B01_BCTC/ReceiveDataFromService",
+    "B01BCQT_Receive": "/api/report/phbB01BCQT/ReceiveDataFromService",
+    "B02BCTC_Receive": "/api/reportbctc/PHA_B02_BCTC/ReceiveDataFromService",
+    "B03bBCTC_Receive": "/api/reportbctc/PHA_B03B_BCTC/ReceiveDataFromService",
+    "B03TT90_Receive": "/api/report/phbB03_TT90/ReceiveDataFromService",
+    "B04BCTC_Receive": "/api/reportbctc/BC04_BCTC_TT107/ReceiveDataFromService",
+    "B04TT90_Receive": "/api/report/phbB04_TT90/ReceiveDataFromService",
+    "F01_01BCQT_Receive": "/api/report/phbF01_01BCQT/ReceiveDataFromService",
+    "F01_02_P1BCQT_Receive": "/api/reportbctc/PHB_F01_02_P1/ReceiveDataFromService",
+    "F01_02_P2BCQT_Receive": "/api/report/phbF01_02BCQT/ReceiveDataFromService"
   }
 }
