--- a/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
+++ b/BT_SendDataMISA/BT_SendDataMISA/appsettings.json
@@ -35,6 +35,7 @@
     "TenUngDung": "MISAMimosa.NET",
     "Directory": "C:\\MISA JSC\\",
     "Name": "MISA Mimosa.NET",
+    "UserId": "MISAMimosa2020",
     "Password": "100K_Doanh_Nghiep",
     "ConnectStringName": "MimosaSQL",
     "IgnoreConnectString": "asynchronous processing=True;multipleactiveresultsets=True;connect timeout=30",
